<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.adnroid.justjava.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/outerFrame" >

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/interline"
            android:hint="@string/name_hint"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/interline"
            android:text="@string/toppings"
            android:textAllCaps="true" />

        <CheckBox
            android:id="@+id/whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/interline"
            android:paddingLeft="@dimen/toppingsIndent"
            android:text="@string/whipped_cream"
            android:onClick="whippedCreamChecked"
            android:textSize="@dimen/textNormal" />

        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/interline"
            android:paddingLeft="@dimen/toppingsIndent"
            android:text="@string/chocolate"
            android:onClick="chocolateChecked"
            android:textSize="@dimen/textNormal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/interline"
            android:text="@string/quantity"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/quantityButtonsSize"
                android:layout_height="@dimen/quantityButtonsSize"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/quantityNumberPadding"
                android:paddingRight="@dimen/quantityNumberPadding"
                android:text="2"
                android:textColor="@color/textDark"
                android:textSize="@dimen/textNormal" />

            <Button
                android:layout_width="@dimen/quantityButtonsSize"
                android:layout_height="@dimen/quantityButtonsSize"
                android:onClick="increment"
                android:text="+" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/interline"
            android:layout_marginTop="@dimen/interline"
            android:text="@string/total_price"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/total_price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starting_price"
            android:textColor="@color/textDark"
            android:textSize="@dimen/textNormal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/interline"
            android:layout_marginBottom="@dimen/interline"
            android:onClick="submitOrder"
            android:text="@string/order_button" />

    </LinearLayout>
</ScrollView>